@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
+2008-07-10  Michael Jahn
+	* updated Filmtipset plugin
+
 2008-05-09  Michael Jahn
 	* added cast, genre and grouping by first letter to pdf export (thanks to Luigi Pantano)
 
